syntax = "proto3";

package credentialproto;

service CredentialService {
  rpc GetCredentials(GetCredentialRequest) returns (GetCredentialResponse) {};
}

message GetCredentialRequest {

}

message GetCredentialResponse {
  int32 id = 1;
  string detail_credential = 2;
}